Finally Fixed Overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,6 @@ body {
 	color: #141414;
 	font-family: sans-serif;
 	width: calc(100vw - 17px);
-	overflow-x: hidden;
 }
 
 p {
@@ -231,14 +230,6 @@ a > img {
 	.info {
 		min-width: 80vw;
 		font-size: 3vw;
-	}
-	.image > img {
-		width: 60vw;
-	}
-
-	.image > video {
-		width: 80vh;
-	}
 }
 
 /* About/Contact Group */
@@ -565,6 +556,9 @@ footer > p	{
 	::-webkit-scrollbar { 
 		display: none; 
 	}
+	html {
+		background-size: 50vh;
+	}
 	body {
 		width: 100vw;
 	}
@@ -585,6 +579,9 @@ footer > p	{
 	}
 	.image > img {
 		width: 100vw;
+	}
+	.multi-img > .image > img {
+		width: calc(100vw - 200px);
 	}
 	.image > video {
 		width: 100vw;
